welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:47: error: value % is not a member of java.awt.Color
      setCouleurBrosse(res(j+decalage+i)%longueurTableau)
                                        ^